<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/search_c"
        android:textStyle="bold|italic"
        android:id="@+id/Criteria"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:id="@+id/LocationsS"
        android:layout_below="@+id/Criteria"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:id="@+id/BuildingsS"
        android:layout_below="@+id/LocationsS"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:text="@string/search_d"
        android:id="@+id/Date"
        android:layout_below="@+id/BuildingsS"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:text="@string/search_df"
        android:id="@+id/DateF"
        android:layout_below="@+id/Date"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:text="@string/search_ha"
        android:id="@+id/TimeA"
        android:layout_below="@+id/BuildingsS"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"/>

    <EditText
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:text="@string/search_hb"
        android:id="@+id/TimeB"
        android:layout_below="@+id/Date"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:text="@string/search_p"
        android:id="@+id/Specifics"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/DateF"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:inputType="number"
        android:digits="0123456789"
        android:ems="10"
        android:id="@+id/NumberPeople"
        android:text="@string/search_n"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/DateF"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/search_s"
        android:textStyle="bold"
        android:id="@+id/Search"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/Specifics"
        android:layout_centerHorizontal="true" />

</RelativeLayout>